deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-credential-injector
  namespace: daaas-system
  labels:
    apps.kubernetes.io/name: minio-credential-injector
spec:
  selector:
    matchLabels:
      apps.kubernetes.io/name: minio-credential-injector
  template:
    metadata:
      labels:
        apps.kubernetes.io/name: minio-credential-injector
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      serviceAccountName: minio-credential-injector
      containers:
      - name: minio-credential-injector
        image: k8scc01covidacr.azurecr.io/minio-credential-injector:06981fe1fd26258fb319943237bb2e1ed76b5181
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: /certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: minio-credential-injector-tls
---
apiVersion: v1
kind: Service
metadata:
  name: minio-credential-injector
  namespace: daaas-system
  labels:
    apps.kubernetes.io/name: minio-credential-injector
spec:
  selector:
    apps.kubernetes.io/name: minio-credential-injector
  ports:
  - name: https
    port: 443
    targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: daaas-system/minio-credential-injector
  labels:
    apps.kubernetes.io/name: minio-credential-injector
  name: minio-credential-injector
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: minio-credential-injector
      namespace: daaas-system
      path: /mutate
      port: 443
  failurePolicy: Ignore
  name: minio-credential-injector.statcan.gc.ca
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
